--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <app-header></app-header>
-<app-side-bar></app-side-bar>
-<router-outlet></router-outlet>
+
+<div id="wrapper" class="toggled">
+       
+        <div id="sidebar-wrapper">
+            <app-side-bar></app-side-bar>
+        </div>
+        <div id="page-content-wrapper">
+            <router-outlet></router-outlet>
+        </div>
+</div>
+
+
 
