--- a/src/assets/css/sb-admin-2.css
+++ b/src/assets/css/sb-admin-2.css
@@ -1862,7 +1862,7 @@ pre code {
   display: block;
   width: 100%;
   height: auto;
-  padding: 1.3rem;
+  padding: .4rem;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
@@ -1870,8 +1870,8 @@ pre code {
   font-weight: 500;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #97a4be;
-  border-radius: 0.75rem;
+  border: 1px solid #D5D5D5;
+  border-radius: 0.3rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 select.form-control{
@@ -11438,3 +11438,18 @@ body.sidebar-toggled footer.sticky-footer {
   color: #00447B;
   font-weight: 600;
 }
+
+#page-content-wrapper { width:100%}
+table.st-table  td, table.st-table  th{ border:none; font-size:14px;}
+table.st-table  th{ color:#00447B;}
+
+table.st-table  tr.tbl-row td{ border-top: 1px solid #E6E6E6; border-bottom: 1px solid #E6E6E6;}
+table.st-table  tr.tbl-row td:first-child {border-left: 1px solid #E6E6E6;  border-top-left-radius: 15px;border-bottom-left-radius: 15px;}
+table.st-table  tr.tbl-row td:last-child {border-right : 1px solid #E6E6E6;  border-top-right-radius: 15px;border-bottom-right-radius: 15px;}
+/* hover row */
+table.st-table tr.tbl-row:hover td{ border-color: #00447B;}
+
+table.st-table {border-collapse: separate;  border-spacing: 0 0;}
+table.st-table tr.tbl-row { background-color: #fff;border-radius: 15px; height:55px;  border:1px solid #8f5555; box-shadow: 0px 3px 6px #00000008;}
+
+table.st-table tr.row-detail .card{ background-color:#F3F5F7; border:none; border-radius: 15px; }
