--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -7,7 +7,31 @@
       </button>
 
       <div class="logo">
-        <span class="logo-text-self">SELF</span><span class="logo-text-pay">PAY</span>
+        <!-- <span class="logo-text-self">SELF</span><span class="logo-text-pay">PAY</span> -->
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="111" height="38" viewBox="0 0 111 38">
+          <defs>
+            <filter id="Subtraction_1" x="91.834" y="21.331" width="7.079" height="4.823" filterUnits="userSpaceOnUse">
+              <feOffset dx="1" dy="1" input="SourceAlpha"/>
+              <feGaussianBlur result="blur"/>
+              <feFlood flood-opacity="0.161"/>
+              <feComposite operator="in" in2="blur"/>
+              <feComposite in="SourceGraphic"/>
+            </filter>
+          </defs>
+          <g id="Group_6" data-name="Group 6" transform="translate(-287.949 -336.343)">
+            <g id="Group_2" data-name="Group 2" transform="translate(287.939 341.304)">
+              <text id="SELF" transform="translate(0.01 26.038)" fill="#00447b" font-size="29"  font-style="italic" letter-spacing="-0.03em"><tspan x="0" y="0">SELF</tspan></text>
+              <text id="PAY" transform="translate(57.01 26.038)" fill="#eb3333" font-size="29"  font-style="italic"><tspan x="0" y="0">PAY</tspan></text>
+            </g>
+            <g id="Group_5" data-name="Group 5" transform="matrix(0.998, 0.07, -0.07, 0.998, 379.82, 357.255)">
+              <g transform="matrix(1, -0.07, 0.07, 1, -93.11, -14.45)" filter="url(#Subtraction_1)">
+                <path id="Subtraction_1-2" data-name="Subtraction 1" d="M4.155,3.719H.395L0,0H4.155a1.859,1.859,0,0,1,0,3.719Z" transform="translate(91.83 21.44) rotate(-1)" fill="#fff"/>
+              </g>
+            </g>
+          </g>
+        </svg>
+        
+        
       </div>
     </div>
 
