--- a/src/app/_shared/side-bar/side-bar.component.html
+++ b/src/app/_shared/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
 
   <li class="nav-item active active-link">
       <a class="nav-link" href="index.html">
-        <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>All Cases</span></a>
   </li>
 
@@ -12,7 +12,7 @@
 
   <li class="nav-item">
       <a class="nav-link active" routerLink="/" >
-        <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>Requested by me</span>
       </a>
 
@@ -24,7 +24,7 @@
 
   <li class="nav-item">
       <a class="nav-link"  routerLink="/" >
-          <i class="ti-folder"></i>
+          <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>Pending Signed EA</span>
       </a>
 
@@ -32,7 +32,7 @@
 
   <li class="nav-item">
       <a class="nav-link"  routerLink="/" >
-          <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>Waiting for Payment</span>
       </a>
 
@@ -41,20 +41,20 @@
   <!-- Nav Item - Charts -->
   <li class="nav-item">
       <a class="nav-link" routerLink="/">
-          <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>Paid</span></a>
   </li>
 
   <!-- Nav Item - Tables -->
   <li class="nav-item">
       <a class="nav-link"  routerLink="/">
-          <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
           <span>Request Expired</span></a>
   </li>
 
   <li class="nav-item">
     <a class="nav-link" routerLink="/">
-        <i class="ti-folder"></i>
+        <img src="../../../assets/img/icon_folder.svg" alt="">
         <span>Cancelled</span></a>
 </li>
 
