--- a/src/app/_shared/side-bar/side-bar.component.html
+++ b/src/app/_shared/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
 
   <li class="nav-item active active-link">
       <a class="nav-link" href="index.html">
-        <img src="../../../assets/img/icon_folder.svg" alt="">
+        <img src="../../../assets/img/icon_folder_stroke.svg" alt="">
           <span>All Cases</span></a>
   </li>
 
