--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -45,8 +45,8 @@
                        <div class="col-md-8 pr-0">
                         <div class="card">
                             <div class="card-body">
-                                
-                                <div>
+
+                                <div class="tab-btn-group">
                                     <tabset type="pills">
                                         <tab heading="Teams">
                                             <strong>Reassign</strong>
@@ -62,21 +62,21 @@
                                                     <input type="text" class="form-control" >
                                                 </div>
                                             </div>
-                                            
+
                                         </tab>
                                         <tab heading="Update Payment">
                                             <strong>Update payment to proceed ahead.</strong>
                                             <p>To move ahead with the processing of H1B Premium Processing for the case #CM70589, fill the check details in the fields below.</p>
                                         </tab>
                                       </tabset>
-                                  </div> 
-                                
-                         
+                                  </div>
+
+
                             </div>
                         </div>
                        </div>
                    </div>
-               </td> 
+               </td>
             </tr>
 
             <tr class="tbl-row" (click)="toggleDetails($event)" >
@@ -89,7 +89,7 @@
                 <td>Aug 31, 2021</td>
                 <td>Amy Acker</td>
                 <td>H1 B Premium Processing</td>
-              
+
             </tr>
             <!-- hidden row -->
             <tr class="row-detail">
@@ -110,8 +110,8 @@
                         <div class="col-md-8 pr-0">
                         <div class="card">
                             <div class="card-body">
-                                
-                                <div>
+
+                                <div class="tab-btn-group">
                                     <tabset type="pills">
                                         <tab heading="Teams">
                                             <strong>Reassign</strong>
@@ -127,24 +127,24 @@
                                                     <input type="text" class="form-control" >
                                                 </div>
                                             </div>
-                                            
+
                                         </tab>
                                         <tab heading="Update Payment">
                                             <strong>Update payment to proceed ahead.</strong>
                                             <p>To move ahead with the processing of H1B Premium Processing for the case #CM70589, fill the check details in the fields below.</p>
                                         </tab>
                                     </tabset>
-                                </div> 
-                                
-                        
+                                </div>
+
+
                             </div>
                         </div>
                         </div>
                     </div>
-                </td> 
+                </td>
             </tr>
-           
+
         </tbody>
     </table>
-    
+
 </div>
