--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -47,16 +47,17 @@
 
                   <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle border-lightgrey"
                           aria-controls="dropdown-basic" style="font-weight: normal;  border-right-width: 0;">
-                    All<span class="caret"></span>
+                          {{searchFilter}}<span class="caret"></span>
                   </button>
                   <div id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                       role="menu" aria-labelledby="button-basic">
-                      <a class="dropdown-item" href="#">Primary C/M#</a>
-                      <a class="dropdown-item" href="#">Zoom BNF#</a>
-                      <a class="dropdown-item" href="#">Visa Beneficiary Name</a>
-                      <a class="dropdown-item" href="#">Dependent</a>
-                      <a class="dropdown-item" href="#">Associate Corp</a>
-                      <a class="dropdown-item" href="#">Requested By</a>
+                      <a class="dropdown-item" href="javascript:void(0)" (click)="getSearchVal(1, 'All')">All</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(2, 'Primary C/M#')">Primary C/M#</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(3, 'Zoom BNF#')">Zoom BNF#</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(4, 'Visa Beneficiary Name')">Visa Beneficiary Name</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(5, 'Dependent')">Dependent</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(6, 'Associate Corp')">Associate Corp</a>
+                      <a class="dropdown-item"  href="javascript:void(0)" (click)="getSearchVal(7, 'Requested By')">Requested By</a>
                 </div>
 
               </div>
@@ -72,12 +73,12 @@
 
     <div class="col-md-4 d-flex">
 
-          <form class="d-none d-sm-inline-block form-inline ml-md-3 my-2 my-md-0 mw-100 navbar-search mr-4">
+          <form class="d-none d-sm-inline-block form-inline ml-md-3 my-2 my-md-0 mw-100 navbar-search mr-4" name="form">
             <div class="input-group">
 
                 <!-- <input type="text" class="form-control  rounded-0" placeholder="Last 7 Days" aria-label="Search" aria-describedby="basic-addon2"> -->
-                <input type="text" ngxDaterangepickerMd [(ngModel)]="selected" [showCustomRangeLabel]="true" [ranges]="ranges" [isInvalidDate] = "isInvalidDate"
-                [showClearButton]="true" class="form-control"/>
+                <input type="text" ngxDaterangepickerMd [(ngModel)]="selected" name="daterange" [alwaysShowCalendars]="true" [showCustomRangeLabel]="true" [ranges]="ranges" [isInvalidDate] = "isInvalidDate"
+                 class="form-control"/>
 
                 <div class="input-group-append">
                     <button class="btn btn-default btn-lightgrey" type="button">
