--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -2,11 +2,11 @@
   <div class="row w-100">
     <div class="col d-flex">
       <!-- Sidebar Toggle (Topbar) -->
-      <button id="sidebarToggleTop" class="btn mr-3">
+      <button id="sidebarToggleTop" class="btn mr-3" (click)="toggleSideBar()" >
           <i class="ti-menu fs-24"></i>
       </button>
 
-      <div class="logo">
+      <div class="logo" >
         <!-- <span class="logo-text-self">SELF</span><span class="logo-text-pay">PAY</span> -->
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="111" height="38" viewBox="0 0 111 38">
           <defs>
@@ -77,18 +77,18 @@
             <div class="input-group">
 
                 <!-- <input type="text" class="form-control  rounded-0" placeholder="Last 7 Days" aria-label="Search" aria-describedby="basic-addon2"> -->
-                <input type="text" ngxDaterangepickerMd [(ngModel)]="selected" name="daterange" [alwaysShowCalendars]="true" [showCustomRangeLabel]="true" [ranges]="ranges" [isInvalidDate] = "isInvalidDate"
-                 class="form-control"/>
+                <input type="text" id="date-range" ngxDaterangepickerMd  [(ngModel)]="selected" name="daterange" [alwaysShowCalendars]="true" [showCustomRangeLabel]="true" [showClearButton]="true" [ranges]="ranges" [isInvalidDate] = "isInvalidDate"
+                 class="form-control" />
 
                 <div class="input-group-append">
-                    <button class="btn btn-default btn-lightgrey" type="button">
+                    <button class="btn btn-default btn-lightgrey" type="button" (click)="clickRange()" >
                       <img src="../../../assets/img/icon_calendar.svg" width="18" alt="">
                     </button>
                 </div>
             </div>
         </form>
 
-        <button class="btn btn-default btn-lightgrey" type="button">
+        <button class="btn btn-default btn-lightgrey" type="button" >
           <img src="../../../assets/img/icon_download.svg" width="18" alt="">
         </button>
     </div>
