--- a/src/app/_shared/side-bar/side-bar.component.html
+++ b/src/app/_shared/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<ul class="navbar-nav bg-gradient-white sidebar accordion" id="accordionSidebar">
+<ul class="navbar-nav bg-gradient-white sidebar accordion" id="accordionSidebar" #toggleSidebarNav>
 
   <li class="nav-item active active-link">
       <a class="nav-link" href="index.html">
@@ -9,7 +9,7 @@
   <div class="sidebar-heading">
       FILTERS
   </div>
-
+  <hr class="sidebar-sep mx-3">
   <li class="nav-item">
       <a class="nav-link active" routerLink="/" >
         <img src="../../../assets/img/icon_folder.svg" alt="">
@@ -21,7 +21,7 @@
   <div class="sidebar-heading">
     STATUSES
   </div>
-
+  <hr class="sidebar-sep mx-3">
   <li class="nav-item">
       <a class="nav-link"  routerLink="/" >
           <img src="../../../assets/img/icon_folder.svg" alt="">
