--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -45,7 +45,7 @@
               <div class="input-group-prepend" dropdown>
 
 
-                  <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle border-lightgrey"
+                  <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle border-lightgrey lg-rounded"
                           aria-controls="dropdown-basic" style="font-weight: normal;  border-right-width: 0;">
                           {{searchFilter}}<span class="caret"></span>
                   </button>
@@ -81,14 +81,14 @@
                  class="form-control" />
 
                 <div class="input-group-append">
-                    <button class="btn btn-default btn-lightgrey ngx-daterangepicker-action" type="button" (click)="openDatepicker()" >
+                    <button class="btn btn-default btn-lightgrey ngx-daterangepicker-action lg-rounded" type="button" (click)="openDatepicker()" >
                       <img src="../../../assets/img/icon_calendar.svg" width="18" alt="">
                     </button>
                 </div>
             </div>
         </form>
 
-        <button class="btn btn-default btn-lightgrey" type="button" >
+        <button class="btn btn-default btn-lightgrey lg-rounded" type="button" >
           <img src="../../../assets/img/icon_download.svg" width="18" alt="">
         </button>
     </div>
