--- a/src/app/_shared/side-bar/side-bar.component.html
+++ b/src/app/_shared/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<ul class="navbar-nav bg-gradient-white sidebar accordion" id="accordionSidebar" #toggleSidebarNav>
+<ul class="navbar-nav sidebar accordion" id="accordionSidebar" #toggleSidebarNav>
 
   <li class="nav-item active active-link">
       <a class="nav-link" href="index.html">
