--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div id="wrapper" class="toggled">
 
-        <div id="sidebar-wrapper">
+        <div id="sidebar-wrapper" class=" bg-gradient-white border-right-light">
             <app-side-bar></app-side-bar>
         </div>
         <div id="page-content-wrapper">
