--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,12 +34,12 @@
                        <div class="col-md-4 p-0">
                            <div class="card">
                                <div class="card-body">
-                                   <h5>H1B Premium Processing</h5>
-                                   <p>Visa Beneficiary: <strong>Rick Hoffman</strong></p>
-                                   <p>Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
-                                   <p>Government filing fee: <strong>$1030</strong></p>
-                                   <p>Legal & administrative fee: <strong>$150</strong></p>
-                                   <p>Total Value: <strong>$1180</strong></p>
+                                   <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
+                                   <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
+                                   <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
+                                   <p class="pplushhead">Government filing fee: <strong>$1030</strong></p>
+                                   <p class="pplushhead">Legal & administrative fee: <strong>$150</strong></p>
+                                   <p class="pplushhead">Total Value: <strong>$1180</strong></p>
                                </div>
                            </div>
                        </div>
@@ -50,24 +50,80 @@
                                 <div class="tab-btn-group">
                                     <tabset type="pills">
                                         <tab heading="Teams">
-                                            <strong>Reassign</strong>
+
+                                          <div dorpdown class="float-dropdown">
+
+                                            <button id="button-basic2" dropdownToggle2 type="button" class="btn dropdown-toggle"
+                                                    aria-controls="dropdown-basic2">
+                                                    <span class="ti-more-alt"></span>
+                                            </button>
+                                            <div id="dropdown-basic2" class="dropdown-menu"
+                                                role="menu" aria-labelledby="button-basic2">
+                                                <a class="dropdown-item" href="javascript:void(0)">Export to spreadsheet (CSV)</a>
+                                                <a class="dropdown-item"  href="javascript:void(0)">Stop Reminder</a>
+                                                <a class="dropdown-item"  href="javascript:void(0)">Refund Payment</a>
+                                                <a class="dropdown-item"  href="javascript:void(0)">Cancel Process</a>
+                                            </div>
+
+                                          </div>
+
+                                          <h5 class="heading-blue mb-4 mt-4">Reassign</h5>
+
                                             <p>In case you wish to reassign the members of attorney and/or paralegal, select from the list below.</p>
 
                                             <div class="row">
-                                                <div class="col">
+                                              <div class="col-md-8 col-lg-10">
+
+
+                                            <div class="row mt-4">
+                                                <div class="col-lg-3">
                                                     <label for="">Attorney</label>
-                                                    <input type="text" class="form-control" >
+                                                    <input type="text" class="form-control icon-search"  placeholder="Search">
                                                 </div>
-                                                <div class="col">
+                                                <div class="col-lg-3">
                                                     <label for="">Paralegal</label>
-                                                    <input type="text" class="form-control" >
+                                                    <input type="text" class="form-control icon-search" placeholder="Search">
                                                 </div>
                                             </div>
+                                          </div>
+                                        </div>
 
                                         </tab>
                                         <tab heading="Update Payment">
-                                            <strong>Update payment to proceed ahead.</strong>
-                                            <p>To move ahead with the processing of H1B Premium Processing for the case #CM70589, fill the check details in the fields below.</p>
+                                          <h5 class="heading-blue mb-4 mt-4">Update payment to proceed ahead.</h5>
+                                          <p>To move ahead with the processing of H1B Premium Processing for the case #CM70589, fill the check details in the fields below.</p>
+
+                                          <div class="row mt-4">
+
+                                            <div class="col-md-8 col-lg-10 mb-md-10">
+                                            <div class="row">
+                                              <div class="col-lg-3 pr-0">
+                                                  <label for="">Check Number</label>
+                                                  <input type="text" class="form-control icon-search"  placeholder="#">
+                                              </div>
+                                              <div class="col-lg-3 pr-0">
+                                                  <label for="">Check Date</label>
+                                                  <input type="text" class="form-control icon-calendar" ngxDaterangepickerMd  [(ngModel)]="selected" name="date" [alwaysShowCalendars]="true" [singleDatePicker]="true" [autoApply]="true" [isInvalidDate] = "isInvalidDate" placeholder="Select Date">
+                                              </div>
+                                              <div class="col-lg-3 pr-0">
+                                                <label for="">Check Received</label>
+                                                <input type="text" class="form-control icon-calendar" ngxDaterangepickerMd  [(ngModel)]="selected_rec" name="date" [alwaysShowCalendars]="true" [singleDatePicker]="true" [autoApply]="true" [isInvalidDate] = "isInvalidDate" placeholder="Select Date">
+                                            </div>
+                                            <div class="col-lg-3 pr-0">
+                                              <label for="">Check Amount</label>
+                                              <input type="text" class="form-control" placeholder="0:00">
+                                            </div>
+                                            </div>
+                                          </div>
+
+                                          <div class="col-lg-2 d-flex align-items-end">
+
+                                              <button class="btn btn-primary">Save</button>
+
+                                        </div>
+</div>
+
+
                                         </tab>
                                       </tabset>
                                   </div>
@@ -76,6 +132,75 @@
                             </div>
                         </div>
                        </div>
+                   </div>
+
+                   <div class="row">
+                     <div class="col-md-12">
+                       <table class="innerTable">
+                         <tr>
+                           <th colspan="2">Friday, September 07, 2021</th>
+                           <th>Status</th>
+                           <th>Time</th>
+                         </tr>
+                         <tr>
+                           <td>7</td>
+                           <td width="400">Case Assigned</td>
+                           <td width="300">Paid</td>
+                           <td>Sep 07, 2021, 19:14:03 PM</td>
+                         </tr>
+                         <tr>
+                          <td>6</td>
+                          <td>Payment</td>
+                          <td>Waiting for Payment</td>
+                          <td>Sep 07, 2021, 19:14:03 PM</td>
+                        </tr>
+
+                       </table>
+
+
+                       <table class="innerTable">
+                        <tr>
+                          <th colspan="2">Thursday, September 06, 2021</th>
+                          <th>Status</th>
+                          <th>Time</th>
+                        </tr>
+                        <tr>
+                          <td>5</td>
+                          <td width="400">Rick Hoffman has signed DocuSign#289377929</td>
+                          <td width="300">Signed</td>
+                          <td>Sep 06, 2021, 19:42:02 PM</td>
+                        </tr>
+                        <tr>
+                         <td>4</td>
+                         <td>First reminder sent</td>
+                         <td>Reminder Sent</td>
+                         <td>Sep 06, 2021, 19:14:04 PM</td>
+                       </tr>
+
+                       <tr>
+                        <td>3</td>
+                        <td>Signature</td>
+                        <td>Pending Signed EA</td>
+                        <td>Aug 30, 2021, 01:14:03 PM</td>
+                      </tr>
+
+                      <tr>
+                        <td>2</td>
+                        <td>Gabriel M has sent engagement CM70573</td>
+                        <td>Sent</td>
+                        <td>Aug 30, 2021, 01:14:03 PM</td>
+                      </tr>
+
+                      <tr>
+                        <td>1</td>
+                        <td>Gabriel M Assigned</td>
+                        <td>Assigned</td>
+                        <td>Aug 30, 2021, 01:14:03 PM</td>
+                      </tr>
+
+                      </table>
+
+                     </div>
                    </div>
                </td>
             </tr>
@@ -93,54 +218,68 @@
 
             </tr>
             <!-- hidden row -->
-            <tr class="row-detail  hide-table-padding" >
+            <tr class="row-detail  " >
                 <td colspan="9">
                     <div class="row">
                         <div class="col-md-4 p-0">
                             <div class="card">
-                                <div class="card-body">
-                                    <h5>H1B Premium Processing</h5>
-                                    <p>Visa Beneficiary: <strong>Rick Hoffman</strong></p>
-                                    <p>Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
-                                    <p>Government filing fee: <strong>$1030</strong></p>
-                                    <p>Legal & administrative fee: <strong>$150</strong></p>
-                                    <p>Total Value: <strong>$1180</strong></p>
-                                </div>
+                              <div class="card-body">
+                                <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
+                                <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
+                                <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
+
+                            </div>
                             </div>
                         </div>
-                        <div class="col-md-8 pr-0">
+                        <div class="col-md-4 pr-0">
                         <div class="card">
                             <div class="card-body">
 
                                 <div class="tab-btn-group">
-                                    <tabset type="pills">
-                                        <tab heading="Teams">
-                                            <strong>Reassign</strong>
-                                            <p>In case you wish to reassign the members of attorney and/or paralegal, select from the list below.</p>
+                                  <h5 class="heading-blue mb-4">Reassign</h5>
+                                  <p>In case you wish to reassign the members of attorney and/or paralegal, select from the list below.</p>
 
-                                            <div class="row">
-                                                <div class="col">
-                                                    <label for="">Attorney</label>
-                                                    <input type="text" class="form-control" >
-                                                </div>
-                                                <div class="col">
-                                                    <label for="">Paralegal</label>
-                                                    <input type="text" class="form-control" >
-                                                </div>
-                                            </div>
-
-                                        </tab>
-                                        <tab heading="Update Payment">
-                                            <strong>Update payment to proceed ahead.</strong>
-                                            <p>To move ahead with the processing of H1B Premium Processing for the case #CM70589, fill the check details in the fields below.</p>
-                                        </tab>
-                                    </tabset>
+                                  <div class="row">
+                                      <div class="col">
+                                          <label for="" class="custom-label">Attorney</label>
+                                          <input type="text" class="form-control icon-search"  placeholder="Search">
+                                      </div>
+                                      <div class="col">
+                                          <label for="" class="custom-label">Paralegal</label>
+                                          <input type="text" class="form-control icon-search"  placeholder="Search">
+                                      </div>
+                                  </div>
                                 </div>
 
 
                             </div>
                         </div>
                         </div>
+                        <div class="col-md-4 pr-0">
+                          <div class="card">
+                              <div class="card-body  d-flex align-items-end">
+
+                                  <div class="tab-btn-group w-100">
+                                    <p>Select Engagement Agreement<br> from the dropdown menu given below.</p>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            <label for="" class="custom-label">Agreement</label>
+                                            <select class="form-control" >
+                                              <option selected>-Select-</option>
+                                              <option value="value-1">value-1</option>
+                                              </select>
+                                        </div>
+                                        <div class="col d-flex align-items-end">
+                                            <button  class="btn btn-primary" >Review agreement</button>
+                                        </div>
+                                    </div>
+                                  </div>
+
+
+                              </div>
+                          </div>
+                          </div>
                     </div>
                 </td>
             </tr>
