--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -221,12 +221,31 @@
             <tr class="row-detail  " >
                 <td colspan="9">
                     <div class="row">
-                        <div class="col-md-4 p-0">
+                        <div class="col-md-5 p-0">
                             <div class="card">
                               <div class="card-body">
-                                <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
-                                <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
-                                <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
+                                <div>
+                                  <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
+                                  <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
+                                  <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
+                               </div>
+
+                                <div class="row mt-3">
+                                  <div class="col">
+                                      <label for="" class="custom-label dark-label">Government filing fee:</label>
+                                      <input type="text" class="form-control icon-edit" value="$1030">
+                                  </div>
+                                  <div class="col">
+                                      <label for="" class="custom-label dark-label">Legal & administrative fee:</label>
+                                      <input type="text" class="form-control icon-edit" value="$100">
+                                  </div>
+
+                                  <div class="col">
+                                    <label for="" class="custom-label dark-label">Total:</label>
+                                    <p class="p-2">$1030</p>
+                                </div>
+                              </div>
+
 
                             </div>
                             </div>
@@ -255,7 +274,7 @@
                             </div>
                         </div>
                         </div>
-                        <div class="col-md-4 pr-0">
+                        <div class="col-md-3 pr-0">
                           <div class="card">
                               <div class="card-body  d-flex align-items-end">
 
@@ -263,7 +282,7 @@
                                     <p>Select Engagement Agreement<br> from the dropdown menu given below.</p>
 
                                     <div class="row">
-                                        <div class="col">
+                                        <div class="col pr-1">
                                             <label for="" class="custom-label">Agreement</label>
                                             <select class="form-control" >
                                               <option selected>-Select-</option>
