--- a/src/app/_shared/side-bar/side-bar.component.html
+++ b/src/app/_shared/side-bar/side-bar.component.html
@@ -58,10 +58,9 @@
         <span>Cancelled</span></a>
 </li>
 
-  <!-- Sidebar Toggler (Sidebar) -->
-  <!-- <div class="text-center d-none d-md-inline">
-      <button class="rounded-circle border-0" id="sidebarToggle"></button>
-  </div> -->
 
+<!-- OD logo -->
+  <a class="" routerLink="/" class="company-logo">
+      </a>
 
 </ul>
